04-Terraform-Variables-and-Datasources/c3-securitygroups.tf
resource "aws_security_group" "vpc_ssh" {
  name = "vpc-ssh"
  vpc_id = "vpc-0e7a983a8bcd5e045"
  description = "THis is the SG for testing ssh and http port"
  tags = {
    Name = "vpc-ssh"
  }
}

resource "aws_vpc_security_group_ingress_rule" "http_rule" {
  security_group_id = aws_security_group.vpc_ssh.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 80
  ip_protocol       = "tcp"
  to_port           = 80
}

resource "aws_vpc_security_group_ingress_rule" "ssh_rule" {
  security_group_id = aws_security_group.vpc_ssh.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 22
  ip_protocol       = "tcp"
  to_port           = 22
}


resource "aws_vpc_security_group_egress_rule" "vpc_ssh_egress_rule" {
  security_group_id = aws_security_group.vpc_ssh.id
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1" # semantically equivalent to all ports
}
